--- a/projekt forslag.Rmd
+++ b/projekt forslag.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 
-# Projekt forslag 1: SFC-model-Integration volatility integreation in financial sector 
+# Projekt forslag 1: SFC-model- volatility integreation in financial sector 
 
 - Inspiration fra Real buissnies cycles models. 
 
@@ -31,4 +31,10 @@ output: html_document
 
 - For hver kommune (område) se hvordan det rammer (mhs. til hvor meget skatten vil stige), måske opdele i fattige/ikke fattige kommuner --> Se om det vil ændre noget på uligheden. 
 
-- Et andet synspunk kunne være at forudsige hvordan det vil påvirke samfundsøøkonomien med stigene renter samtidig med at skatten nu hæves. 
+- Et andet synspunk kunne være at forudsige hvordan det vil påvirke samfundsøkonomien med stigene renter samtidig med at skatten nu hæves. 
+
+
+- Difference in difference analyse
+
+- regression discontinuity --> men kan først bruges efter dato for ændring? Eller måske ik?
+   - Hvis forventnigner ændre det i dag. 
