--- a/vol i p_e.Rmd
+++ b/vol i p_e.Rmd
@@ -209,3 +209,26 @@ plot(sim2$r_bl, type="l",xlab="Year",
      ylab="Share",lty=1,lwd=2, col="black", main="Andele af formuen");grid()
 ```
 
+```{r}
+plot(sim$aaa,type="l", ylim=c(0,1),xlab="Year",
+     ylab="Share",lty=1,lwd=2, col="black", main="Andele af formuen")
+lines(sim$aap,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="green")
+lines(sim$aao,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="red")
+legend(x=2000, y=0.99,legend=c("Andel af aktier", "Andel af obligationer", "Andel af penge"),
+       lty=c(1,1,1),lwd=c(2,2,2), col=c("black", "green", "red"),bty="n")
+grid()
+```
+
+```{r}
+plot(sim2$aaa,type="l", ylim=c(0,1),xlab="Year",
+     ylab="Share",lty=1,lwd=2, col="black", main="Andele af formuen")
+lines(sim2$aap,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="green")
+lines(sim2$aao,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="red")
+legend(x=2000, y=0.99,legend=c("Andel af aktier", "Andel af obligationer", "Andel af penge"),
+       lty=c(1,1,1),lwd=c(2,2,2), col=c("black", "green", "red"),bty="n")
+grid()
+```
