--- a/GARCCH vol mes.Rmd
+++ b/GARCCH vol mes.Rmd
@@ -106,7 +106,7 @@ beta1 ~ er_re/100,
 ####Volatility
 g ~ g_in + vol*g_bar, ##Ny govement spending
 g_bar ~ vol_1*g_bar[-1] + (g_bar_var^0.5)*varepsilon,
-g_bar_var ~ a_0 + a_1*g_bar_var[-1]*(varepsilon[-1]^2) + b_1*g_bar_var[-1], #Brugt ligning fra kilde
+g_bar_var ~ a_0 + a_1*g_bar_var[-1]*(varepsilon[-1]^2) + b_1*g_bar_var[-1], #Brugt en GARCH(1,1) process
 ####Excess return on stocks
 ex_e ~ mu_ex + sd_ex*u_t,
 mu_ex ~ beta_mu + delta_mu*g_bar_var
@@ -142,14 +142,14 @@ er_rbl_bar ~ 1,
 #er_re_bar ~3,
 e_s_bar~37.17,
 ####Volatilitets measures
-vol ~ 1, #ligmed 1 når volatilitet skal med
+vol ~ 0, #ligmed 1 når volatilitet skal med
 vol_1 ~ 0.6,
 varepsilon ~ sfcr_random("rnorm", mean=0, sd= 1),
 u_t ~ sfcr_random("rnorm", mean=0, sd= 1), #Ranndomness in excess return
 a_0 ~ 1,
 a_1 ~ 0.6,
 b_1 ~0.3,
-sd_ex ~ 1,#gør det muligt a lave stød il sd i exess return.
+sd_ex ~ 0,#gør det muligt a lave stød il sd i exess return.
 beta_mu ~ 3,
 delta_mu ~ 0.1
   )
@@ -233,4 +233,17 @@ plot(sim$g_bar, type="l",xlab="Year",
 ```{r}
 plot(sim$m_h, type="l",xlab="Year",
      ylab="Share",lty=1,lwd=2, col="black", main="BNP");grid()
+```
+
+
+```{r}
+plot(sim$aaa,type="l", ylim=c(0,1),xlab="Year",
+     ylab="Share",lty=1,lwd=2, col="black", main="Andele af formuen")
+lines(sim$aap,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="green")
+lines(sim$aao,type="l",xlab="Year",
+      ylab="Share",lty=1,lwd=2, col="red")
+legend(x=2000, y=0.99,legend=c("Andel af aktier", "Andel af obligationer", "Andel af penge"),
+       lty=c(1,1,1),lwd=c(2,2,2), col=c("black", "green", "red"),bty="n")
+grid()
 ```
